<resources>
    <string name="app_name">Food Order</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_order">Đơn hàng</string>
    <string name="menu_cart">Giỏ hàng</string>
    <string name="my_restaurant_app">Food Order App</string>
    <string name="hello_explore_your_dream_food">Hello Explore Your Dream Food.</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="username">Tên người dùng</string>
    <string name="phone">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="repassword">Xác nhận mật khẩu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite">Favourite</string>
    <string name="menu_favourite">Yêu thích</string>
    <string name="email">Email</string>
    <string name="otp">OTP</string>
    <string name="skip">Bỏ qua</string>
</resources>